--- a/dom/acessandoAtributos1.html
+++ b/dom/acessandoAtributos1.html
@@ -9,13 +9,36 @@
 
 <body class='conteudo exercicio'>
     <div>
-        <a href='https://www.cod3r.com.br'>Cod3r</a>
+        <a href='https://www.cod3r.com.br'>Texto</a>
     </div>
     <div id='primeiro'>
-        <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
+        <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSgerr4yvxK6NNzej0Ybjj8lBZcLzcPIV6EQ&s'
+            alt='logo'>
     </div>
     <script>
-        // ...
+        const img = document.querySelector('img')
+        console.log('getAttribute', img.getAttribute('src'))
+        console.log('src', img.src)
+        console.log('["src"]', img['src'])
+        console.log('alt', img.alt)
+
+        console.log('Elemento "img"..............')
+        console.log('NodeType', img.nodeType)
+        console.log('NodeName', img.nodeName)
+
+        const src = img.getAttributeNode('src')
+        console.log('Elemento "src"..............')
+        console.log('NodeType', src.nodeType)
+        console.log('NodeName', src.nodeName)
+        console.log('NodeValue', src.nodeValue)
+
+        const link = document.querySelector('a')
+        console.log('Elemento "a"..............')
+        console.log('href', link.href)
+        console.log('firstChild.nodeType', link.firstChild.nodeType)
+        link.firstChild.nodeValue = 'Novo Texto'
+        link.innerHTML = 'Novo Texto 2'
+
     </script>
 </body>
 
