--- a/dom/flappy.html
+++ b/dom/flappy.html
@@ -10,9 +10,8 @@
 
 <body class="conteudo">
     <h1>Flappy Bird</h1>
-
     <div wm-flappy></div>
-    <script src="js/flappy.js"></script>
+    <script type="module" src="js/flappyBird.js"></script>
 </body>
 
 </html>
