--- a/dom/html/acessandoAtributos1.html
+++ b/dom/html/acessandoAtributos1.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset='UTF-8'>
     <title>Acessando Atributos #01</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <link rel='stylesheet' href='/dom/css/estilo.css'>
+
 </head>
 
-<body class='conteudo exercicio'>
+<body class=' conteudo exercicio'>
     <div>
         <a href='https://www.cod3r.com.br'>Texto</a>
     </div>
