--- a/dom/html/acessandoClasses.html
+++ b/dom/html/acessandoClasses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='UTF-8'>
     <title>Acessando Classes</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <link rel='stylesheet' href='/dom/css/estilo.css'>
 </head>
 
 <body class='conteudo exercicio'>
