--- a/dom/html/dom.html
+++ b/dom/html/dom.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>O que é DOM?</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="/dom/css/estilo.css">
     <style>
         p {
             font-size: 2em;
@@ -14,10 +15,13 @@
         }
     </style>
 </head>
+
 <body class="conteudo">
     <p>
-        <strong>Document Object Model (DOM)</strong> representa a estrutura do documento HTML e o relacionamento entre os elementos (as tags).
+        <strong>Document Object Model (DOM)</strong> representa a estrutura do documento HTML e o relacionamento entre
+        os elementos (as tags).
     </p>
-    <img src="imgs/dom.png" alt="DOM">
+    <img src="/dom/imgs/dom.png" alt="DOM">
 </body>
+
 </html>
