--- a/dom/html/flappy.html
+++ b/dom/html/flappy.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/flappy.css">
+    <link rel="stylesheet" href="/dom/css/estilo.css">
+    <link rel="stylesheet" href="/dom/css/flappy.css">
 </head>
 
 <body class="conteudo">
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
-    <script type="module" src="js/flappyBird.js"></script>
+    <script type="module" src="/dom/js/flappyBird.js"></script>
 </body>
 
 </html>
