--- a/dom/html/selecionandoElementos3.html
+++ b/dom/html/selecionandoElementos3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Selecionar Elementos #03</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="/dom/css/estilo.css">
     <style>
         form {
             display: flex;
