--- a/dom/index.html
+++ b/dom/index.html
@@ -13,24 +13,24 @@
         <div class="menu-principal">
             <h1>Integrando HTML, CSS e JS</h1>
             <nav>
-                <a href="./dom.html">O que é DOM?</a>
-                <a href="./selecionandoElementos1.html">Selecionando Elementos #01</a>
-                <a href="./selecionandoElementos2.html">Selecionando Elementos #02</a>
-                <a href="./selecionandoElementos3.html">Selecionando Elementos #03</a>
-                <a href="./selecionandoElementos4.html">Selecionando Elementos #04</a>
-                <a href="./acessandoAtributos1.html">Acessando Atributos #01</a>
-                <a href="./acessandoAtributos2.html">Acessando Atributos #02</a>
-                <a href="./acessandoAtributos3.html">Acessando Atributos #03</a>
+                <a href="/dom/html/dom.html">O que é DOM?</a>
+                <a href="/dom/html/selecionandoElementos1.html">Selecionando Elementos #01</a>
+                <a href="/dom/html/selecionandoElementos2.html">Selecionando Elementos #02</a>
+                <a href="/dom/html/selecionandoElementos3.html">Selecionando Elementos #03</a>
+                <a href="/dom/html/selecionandoElementos4.html">Selecionando Elementos #04</a>
+                <a href="/dom/html/acessandoAtributos1.html">Acessando Atributos #01</a>
+                <a href="/dom/html/acessandoAtributos2.html">Acessando Atributos #02</a>
+                <a href="/dom/html/acessandoAtributos3.html">Acessando Atributos #03</a>
             </nav>
             <nav>
-                <a href="./acessandoClasses.html">Acessando Classes</a>
-                <a href="./modificandoHTML1.html">Modificando HTML #01</a>
-                <a href="./modificandoHTML2.html">Modificando HTML #02</a>
-                <a href="./trabalhandoComEventos1.html">Trabalhando c/ Eventos #01</a>
-                <a href="./trabalhandoComEventos2.html">Trabalhando c/ Eventos #02</a>
-                <a href="./trabalhandoComEventos3.html">Trabalhando c/ Eventos #03</a>
-                <a href="./trabalhandoComEventos4.html">Trabalhando c/ Eventos #04</a>
-                <a href="./flappy.html">Projeto Flappy Bird</a>
+                <a href="/dom/html/acessandoClasses.html">Acessando Classes</a>
+                <a href="/dom/html/modificandoHTML1.html">Modificando HTML #01</a>
+                <a href="/dom/html/modificandoHTML2.html">Modificando HTML #02</a>
+                <a href="/dom/html/trabalhandoComEventos1.html">Trabalhando c/ Eventos #01</a>
+                <a href="/dom/html/trabalhandoComEventos2.html">Trabalhando c/ Eventos #02</a>
+                <a href="/dom/html/trabalhandoComEventos3.html">Trabalhando c/ Eventos #03</a>
+                <a href="/dom/html/trabalhandoComEventos4.html">Trabalhando c/ Eventos #04</a>
+                <a href="/dom/html/flappy.html">Projeto Flappy Bird</a>
             </nav>
         </div>
     </div>
