html 5 and responsive flappy css

--- a/dom/html/acessandoAtributos1.html
+++ b/dom/html/acessandoAtributos1.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/dom/css/estilo.css">
     <title>Acessando Atributos #01</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
-
 </head>
 
-<body class=' conteudo exercicio'>
+<body class='conteudo exercicio'>
     <div>
         <a href='https://www.cod3r.com.br'>Texto</a>
     </div>
@@ -39,7 +36,6 @@
         console.log('firstChild.nodeType', link.firstChild.nodeType)
         link.firstChild.nodeValue = 'Novo Texto'
         link.innerHTML = 'Novo Texto 2'
-
     </script>
 </body>
 
