--- a/dom/html/dom.html
+++ b/dom/html/dom.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que é DOM?</title>
     <link rel="stylesheet" href="/dom/css/estilo.css">
     <style>
@@ -11,7 +12,7 @@
         }
 
         .conteudo img {
-            height: 80%;
+            width: 90%;
         }
     </style>
 </head>
