--- a/dom/html/flappy.html
+++ b/dom/html/flappy.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
     <link rel="stylesheet" href="/dom/css/estilo.css">
     <link rel="stylesheet" href="/dom/css/flappy.css">
@@ -11,6 +12,7 @@
 <body class="conteudo">
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
+
     <script type="module" src="/dom/js/flappyBird.js"></script>
 </body>
 
