--- a/dom/html/modificandoHTML2.html
+++ b/dom/html/modificandoHTML2.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modificando HTML #02</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
+    <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
 
-<body class='conteudo exercicio'>
+<body class="conteudo exercicio">
     <div>
         <p>Texto Inicial</p>
     </div>
@@ -22,7 +23,6 @@
 
         // somente texto (sem tags)
         console.log(div.innerText)
-
     </script>
 </body>
 
