--- a/dom/html/selecionandoElementos2.html
+++ b/dom/html/selecionandoElementos2.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecionar Elementos #02</title>
     <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
@@ -36,7 +37,6 @@
 
         deselecionar('*')
         selecionar('[wb-attrib]')
-
     </script>
 </body>
 
