--- a/dom/html/selecionandoElementos4.html
+++ b/dom/html/selecionandoElementos4.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecionar Elementos #04</title>
     <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
@@ -50,7 +51,6 @@
         lista.parentNode.nextElementSibling.log()
 
         document.querySelectorAll('div ul li').log()
-
     </script>
 </body>
 
