--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrando HTML, CSS e JS</title>
     <link rel="stylesheet" href="/dom/css/estilo.css">
-    <link rel="stylesheet" href="dom/css/menu.css">
+    <link rel="stylesheet" href="/dom/css/menu.css">
 </head>
 
 <body>
-    <div class="conteudo">
-        <div class="menu-principal">
+    <main class="conteudo">
+        <aside class="menu-principal">
             <h1>Integrando HTML, CSS e JS</h1>
-            <nav>
+            <nav aria-label="Menu de conteúdo 1">
                 <a href="/dom/html/dom.html">O que é DOM?</a>
                 <a href="/dom/html/selecionandoElementos1.html">Selecionando Elementos #01</a>
                 <a href="/dom/html/selecionandoElementos2.html">Selecionando Elementos #02</a>
@@ -22,7 +23,7 @@
                 <a href="/dom/html/acessandoAtributos2.html">Acessando Atributos #02</a>
                 <a href="/dom/html/acessandoAtributos3.html">Acessando Atributos #03</a>
             </nav>
-            <nav>
+            <nav aria-label="Menu de conteúdo 2">
                 <a href="/dom/html/acessandoClasses.html">Acessando Classes</a>
                 <a href="/dom/html/modificandoHTML1.html">Modificando HTML #01</a>
                 <a href="/dom/html/modificandoHTML2.html">Modificando HTML #02</a>
@@ -32,8 +33,8 @@
                 <a href="/dom/html/trabalhandoComEventos4.html">Trabalhando c/ Eventos #04</a>
                 <a href="/dom/html/flappy.html">Projeto Flappy Bird</a>
             </nav>
-        </div>
-    </div>
+        </aside>
+    </main>
 </body>
 
 </html>
