--- a/dom/html/acessandoAtributos2.html
+++ b/dom/html/acessandoAtributos2.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/dom/css/estilo.css">
     <title>Acessando Atributos #02</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
 </head>
 
 <body class='conteudo exercicio'>
@@ -34,8 +35,6 @@
         console.log(label.for)
         console.log(label.htmlFor)
         console.log(label.getAttribute('for'))
-
-
     </script>
 </body>
 
