--- a/dom/html/acessandoAtributos3.html
+++ b/dom/html/acessandoAtributos3.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acessando Atributos #03</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
+    <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
 
-<body class='conteudo exercicio'>
+<body class="conteudo exercicio">
     <div>
-        <ul id="compras" destino='escritório' data-urgencia="5">
+        <ul id="compras" destino="escritório" data-urgencia="5">
             <li>Café</li>
             <li>Água</li>
             <li>Copo Descartável</li>
         </ul>
     </div>
-    <script>
-        const lista = document.querySelector('#compras')
 
-        //somente leitura
-        console.log(lista.attributes)
-        console.log(lista.attributes[0])
-        console.log(lista.attributes.destino)
-        console.log(lista.attributes['data-urgencia'])
+    <script>
+        const lista = document.querySelector('#compras');
+
+        // somente leitura
+        console.log(lista.attributes);
+        console.log(lista.attributes[0]);
+        console.log(lista.attributes.destino);
+        console.log(lista.attributes['data-urgencia']);
     </script>
 </body>
 
