--- a/dom/html/acessandoClasses.html
+++ b/dom/html/acessandoClasses.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acessando Classes</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
+    <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
 
-<body class='conteudo exercicio'>
+<body class="conteudo exercicio">
     <div>
         Classes
     </div>
-    <script>
-        const div = document.querySelector('div')
-        const classes = div.classList
-        classes.add('destaque')
-        classes.remove('destaque')
-        classes.toggle('destaque')
-        console.log(classes.contains('destaque'))
-        console.log(classes.length)
-        classes.toggle('destaque')
-        console.log(classes.length)
 
-        classes.add('destaque1')
-        classes.add('destaque2')
-        console.log(classes.length)
+    <script>
+        const div = document.querySelector('div');
+        const classes = div.classList;
+
+        classes.add('destaque');
+        classes.remove('destaque');
+        classes.toggle('destaque');
+        console.log(classes.contains('destaque'));
+        console.log(classes.length);
+        classes.toggle('destaque');
+        console.log(classes.length);
+
+        classes.add('destaque1');
+        classes.add('destaque2');
+        console.log(classes.length);
 
         for (let c of classes) {
-            console.log(c)
+            console.log(c);
         }
 
-        classes.forEach(c => console.log(c))
-
-
+        classes.forEach(c => console.log(c));
     </script>
 </body>
 
