--- a/dom/html/modificandoHTML1.html
+++ b/dom/html/modificandoHTML1.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modificando HTML #01</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
+    <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
 
-<body class='conteudo exercicio'>
+<body class="conteudo exercicio">
     <script>
         const body = document.querySelector('body')
 
@@ -34,7 +35,6 @@
         const div4 = div3.cloneNode(true)
         body.appendChild(div4)
         body.removeChild(div3)
-
     </script>
 </body>
 
