--- a/dom/html/trabalhandoComEventos1.html
+++ b/dom/html/trabalhandoComEventos1.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com Eventos #01</title>
-    <link rel='stylesheet' href='/dom/css/estilo.css'>
+    <link rel="stylesheet" href="/dom/css/estilo.css">
 </head>
 
 <body class="conteudo exercicio">
     <div>
-        <!-- onclick="navegarEm5s(event)" -->
+        <!-- Link com atraso na navegação -->
         <a espera-um-pouco href="https://google.com.br">Google</a>
     </div>
+
     <script>
         function navegarEm5s(e) {
-            e.preventDefault()
-            console.log('Saindo em 5s...')
+            e.preventDefault();
+            console.log('Saindo em 5s...');
             setTimeout(() => {
-                window.location.href = e.target.href
-            }, 5000)
+                window.location.href = e.target.href;
+            }, 5000);
         }
 
-        // const a = document.querySelector('a')
-        // a.onclick = navegarEm5s
-
-        const a = document.querySelector('[espera-um-pouco]')
-        a.onclick = navegarEm5s
+        const a = document.querySelector('[espera-um-pouco]');
+        a.onclick = navegarEm5s;
     </script>
 </body>
+
+</html>
