--- a/dom/html/trabalhandoComEventos3.html
+++ b/dom/html/trabalhandoComEventos3.html
@@ -1,25 +1,35 @@
-</html>
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com Eventos #03</title>
     <style>
         body {
             margin: 0;
             display: flex;
+            flex-wrap: wrap;
+            min-height: 100vh;
+        }
+
+        .esquerda,
+        .direita {
+            flex: 1 1 50%;
+            min-height: 50vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 10px;
+            box-sizing: border-box;
         }
 
         .esquerda {
-            height: 100vh;
-            width: 50%;
             background-color: coral;
         }
 
         .direita {
-            height: 100vh;
-            width: 50%;
             background-color: cornflowerblue;
         }
 
@@ -28,10 +38,24 @@
             background-color: darkgrey;
             color: white;
             height: 100px;
-            font-size: 40px;
+            width: 80%;
+            max-width: 200px;
+            font-size: 2em;
             margin: 10px;
-            vertical-align: middle;
             text-align: center;
+            line-height: 100px;
+            cursor: grab;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+            }
+
+            .esquerda,
+            .direita {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -44,24 +68,25 @@
         <div class="item">4</div>
     </div>
     <div class="direita" wm-dropzone></div>
-    <script>
-        const items = document.querySelectorAll('[wm-dropzone] .item')
-        items.forEach((item, index) => {
-            item.draggable = true
-            item.id = item.id || `draggable-item-${index}`
-            item.ondragstart = e => e.dataTransfer.setData('item-id', e.target.id)
-        })
 
-        const dropzones = document.querySelectorAll('[wm-dropzone]')
+    <script>
+        const items = document.querySelectorAll('[wm-dropzone] .item');
+        items.forEach((item, index) => {
+            item.draggable = true;
+            item.id = item.id || `draggable-item-${index}`;
+            item.ondragstart = e => e.dataTransfer.setData('item-id', e.target.id);
+        });
+
+        const dropzones = document.querySelectorAll('[wm-dropzone]');
         dropzones.forEach(dropzone => {
-            dropzone.ondragover = e => e.preventDefault()
-            dropzone.ondrop = function (e) {
-                const id = e.dataTransfer.getData('item-id')
-                const item = document.getElementById(id)
+            dropzone.ondragover = e => e.preventDefault();
+            dropzone.ondrop = e => {
+                const id = e.dataTransfer.getData('item-id');
+                const item = document.getElementById(id);
                 //e.target.appendChild(item)
-                dropzone.appendChild(item)
-            }
-        })
+                dropzone.appendChild(item);
+            };
+        });
     </script>
 </body>
 
